# Backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml
api/: Cargo.toml  Secrets.dev.toml
api/src/: di.rs  main.rs  routes.rs
api/src/endpoints/: mod.rs
api/src/endpoints/auctions/: confirm_endpoint.rs  create_endpoint.rs  get_all_endpoint.rs  get_by_item_id_endpoint.rs  mod.rs
api/src/endpoints/auctions/bids/: create_endpoint.rs  get_all_endpoint.rs
api/src/endpoints/auth/: login_endpoint.rs  mod.rs  register.rs  register_endpoint.rs
api/src/endpoints/item/: create_endpoint.rs  get_image_endpoint.rs  mod.rs
api/src/endpoints/items/: create_endpoint.rs  get_item_endpoint.rs  get_items_endpoint.rs  mod.rs
api/src/middleware/: auth_middleware.rs
application/: Cargo.toml
application/src/use_cases/: get_items_use_case.rs  get_user_use_case.rs  login_use_case.rs  mod.rs  register_use_case.rs
application/src/use_cases/auctions/: confirm_auction_use_case.rs  create_auction_use_case.rs  get_ongoing_auction_for_item_use_case.rs  get_ongoing_auctions_use_case.rs  handle_expired_auction_use_case.rs  handle_expired_auctions_use_case.rs  mod.rs
application/src/use_cases/bids/: create_bid_use_case.rs  get_bids_use_case.rs  mod.rs
application/src/use_cases/item/: create_item_use_case.rs  get_item_image_use_case.rs  mod.rs
application/src/use_cases/items/: create_item_use_case.rs  get_item_image_use_case.rs  get_item_use_case.rs  get_items_use_case.rs  mod.rs
application/src/use_cases/user/: get_user_use_case.rs  login_use_case.rs  mod.rs  register_use_case.rs
domain/: Cargo.toml
domain/src/: app_error.rs  id.rs  lib.rs
domain/src/entities/: auction.rs  bid.rs  item.rs  mod.rs  token_claims.rs  user.rs
domain/src/interfaces/: i_auction_repository.rs  i_item_repository.rs  i_repositories_module.rs  i_user_repository.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: db.rs  lib.rs  modules.rs
infrastructure/src/models/: auction.rs  bid.rs  item.rs  mod.rs  user.rs
infrastructure/src/repositories/: auction_repository.rs  item_repository.rs  mod.rs  user_repository.rs
migrations/: 20240304193634_init_schema.sql  20240306075418_make_username_and_email_unique_again.sql  20240315171742_remove_items_category_table_and_add_category_field_to_item_table.sql  20240320155825_convert_auction_end_date_to_timestamptz.sql  20240416072237_add_auction_strategy_field.sql
src/: main.rs
