[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

axum = { version = "0.7.3", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-shared-db = { version = "0.40.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
tracing = "0.1.40"
async-trait = "0.1.77"
http-body = "1.0.0"
validator = { version = "0.17.0", features = ["derive"] }
axum-valid = "0.17.0"
anyhow = "1.0.80"
tower-http = { version = "0.5.2", features = ["cors"] }
shuttle-secrets = "0.41.0"