[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

derive-new = "0.6.0"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
chrono = "0.4.19"
validator = { version = "0.17.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.3"
lazy_static = { version = "1.4.0", features = [] }
argon2 = "0.5.3"