[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

axum = { version = "0.7.3", features = ["multipart"] }
derive-new = "0.6.0"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
validator = { version = "0.17.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = { version = "1.4.0", features = [] }
tracing = "0.1.40"
fancy-regex = "0.13.0"
mockall = "0.12.1"
bcrypt = "0.15.0"
uuid = { version = "1.7.0", features = ["v4"] }
axum_typed_multipart = "0.11.0"
tempfile = "3.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
